--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
     <p id="loveMessage">Ты будешь моей козой в тазике! 🐐💖</p>
 
-    <audio id="music" src="https://xyxnax14.github.io/Valentine-card/music.mp3"></audio>
+    <audio id="music" src="https://xyxnax14.github.io/Valentine-card/Poshlaya_Molli_-_Vse_khotyat_menya_pocelovat_53333903.mp3"></audio>
 
     <script>
         function playMusic() {
