--- a/index.html
+++ b/index.html
@@ -93,8 +93,9 @@
 
     <p id="loveMessage">Ты будешь моей козой в тазике! 🐐💖</p>
 
-    <audio id="music" src=https://drive.google.com/file/d/1a869Qsumma3ccdh74t8rGelJyFVniV7J/view?usp=sharing></audio>
-
+   <audio id="music" controls autoplay>
+    <source src="https://files.catbox.moe/naontc.mp3" type="audio/mpeg">
+</audio>
     <script>
         function playMusic() {
             let music = document.getElementById("music");
